<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ma.eni.fr.europcar.fragment.ConnexionFragment">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:id="@+id/connexion_email" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mot_de_passe"
        android:inputType="textPassword"
        android:id="@+id/connexion_mot_de_passe" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/mot_de_passe2"
        android:id="@+id/connexion_mot_de_passe_2" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/token"
        android:id="@+id/connexion_token" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/se_connecter"
            style="@style/bouton"
            android:id="@+id/connexion_se_connecter" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/inscription"
            style="@style/bouton"
            android:id="@+id/connexion_inscription" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/s_inscrire"
            style="@style/bouton"
            android:id="@+id/connexion_s_inscrire" />

    </LinearLayout>

</LinearLayout>