<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <EditText
        android:inputType="datetime"
        android:id="@+id/fragment_date_debut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/date_de_d_but"/>
    <EditText
        android:inputType="date"
        android:id="@+id/fragment_date_fin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/date_de_fin"/>
    <EditText
        android:inputType="numberDecimal"
        android:id="@+id/fragment_tarif_journalier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tarif_journalier"/>

    <Button
        android:id="@+id/fragment_btn_reserver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reserver"/>
</LinearLayout>